add sitemap & robots

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Visibiliza tu negocio y crea una web profesional conmigo" />
+    <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrea</title>
+    <title>Andrea - Desarrollo de páginas web</title>
   </head>
   <body>
     <div id="root"></div>
