--- a/public/404.html
+++ b/public/404.html
@@ -7,6 +7,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
+    <script>
+      // Redirige rutas desconocidas a la raíz usando el hash para SPAs
+      if (location.pathname !== '/' && !location.pathname.startsWith('/index.html')) {
+        location.replace('/#' + location.pathname + location.search + location.hash);
+      }
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
